<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@mipmap/spiderman_foreground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/button_play"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center|center|center"
            android:background="@drawable/button_play"/>

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="69dp"
            android:background="@drawable/back"/>

        <ImageView
            android:id="@+id/button_union"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="79dp"
            android:layout_marginLeft="359dp"
            android:background="@drawable/union" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_gravity="center|center|center"
            android:layout_marginTop="39dp"
            android:textColor="#ffff"
            android:text="@string/button_play" style="@style/Toolbar_TextView"/>

    </FrameLayout>
    <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@drawable/rectangle"
       android:layout_marginTop="250dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent">

       <TextView
           android:id="@+id/title_spiderman"
           android:layout_width="198dp"
           android:layout_height="50dp"
           android:text="@string/title_spiderman"
           android:layout_gravity="left|top"
           android:layout_marginLeft="24dp"
           android:layout_marginTop="24dp"
           android:textColor="#000"
           android:textStyle="bold"
           android:textSize="20dp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/bookmark_on_description"
            android:background="@drawable/bookmark"
            android:layout_gravity="right|top"
            android:layout_marginRight="24dp"
            android:layout_marginTop="27dp"/>
        <TextView
            android:text="@string/spiderman_imdb_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_rating"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="84dp"
           />

        <ImageView
            android:id="@+id/item_rating_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top|left"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="88dp"
            app:srcCompat="@drawable/star"
            tools:ignore="VectorDrawableCompat" />

        <Button
            android:id="@+id/spiderman_category_1"
            android:layout_width="62dp"
            android:layout_height="18dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="113dp"
            android:foreground="@drawable/category_action"
            />

        <Button
            android:id="@+id/spiderman_category_2"
            android:layout_width="62dp"
            android:layout_height="18dp"
            android:layout_marginLeft="94dp"
            android:layout_marginTop="113dp"
            android:foreground="@drawable/category_adventure"
            />
        <Button
            android:id="@+id/spiderman_category_3"
            android:layout_width="62dp"
            android:layout_height="18dp"
            android:layout_marginLeft="164dp"
            android:layout_marginTop="113dp"
            android:foreground="@drawable/category_fantasy"
            />
        <TextView
            android:id="@+id/length_title_spider"
            android:layout_width="40dp"
            android:layout_height="15dp"
            android:text="@string/title_length"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="147dp"
            android:textSize="12dp"
            />

        <TextView
            android:id="@+id/language_title_spider"
            android:layout_width="40dp"
            android:layout_height="15dp"
            android:text="@string/title_language"
            android:layout_marginLeft="133dp"
            android:layout_marginTop="147dp"
            android:textSize="12dp"
            />

        <TextView
            android:id="@+id/rating_title_spider"
            android:layout_width="40dp"
            android:layout_height="15dp"
            android:text="@string/title_rating"
            android:layout_marginLeft="242dp"
            android:layout_marginTop="147dp"
            android:textSize="12dp"
            />
        <TextView
            android:id="@+id/length_spider"
            android:layout_width="55dp"
            android:layout_height="15dp"
            android:text="@string/spiderman_length"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="166dp"
            android:textSize="12dp"
            android:textColor="#000"
            />
        <TextView
            android:id="@+id/language_spider"
            android:layout_width="43dp"
            android:layout_height="15dp"
            android:text="@string/english_language"
            android:layout_marginLeft="133dp"
            android:layout_marginTop="166dp"
            android:textSize="12dp"
            android:textColor="#000"
            />
        <TextView
            android:id="@+id/rating_spider"
            android:layout_width="38dp"
            android:layout_height="15dp"
            android:text="@string/pg13_rating"
            android:layout_marginLeft="242dp"
            android:layout_marginTop="166dp"
            android:textSize="12dp"
            android:textColor="#000"
            />
        <TextView
            android:id="@+id/title_description"
            android:layout_width="99dp"
            android:layout_height="20dp"
            android:text="Description"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="205dp"
            android:textSize="16dp"
            android:textColor="#110E47"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/spiderman_description_full"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:text="@string/spiderman_description"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="233dp"
            android:textSize="12dp"
            android:textColor="#9C9C9C"
            android:lineHeight="22dp"
            />

        <TextView
            android:id="@+id/title_cast"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="367dp"
            android:text="Cast"
            android:textColor="#110E47"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/spiderman_description_full"
            />
        <ImageView
            android:id="@+id/see_more_button"
            android:layout_width="61dp"
            android:layout_height="21dp"
            android:background="@drawable/button_see_more"
            android:layout_marginTop="367dp"
            android:layout_marginLeft="290dp"
            />


        <ImageView
            android:id="@+id/spider_cast1"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@mipmap/tom_holland"
            android:layout_marginTop="404dp"
            android:layout_marginLeft="24dp"
            />
        <ImageView
            android:id="@+id/spider_cast2"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@mipmap/zendaya"
            android:layout_marginTop="404dp"
            android:layout_marginLeft="109dp"
            />
        <ImageView
            android:id="@+id/spider_cast3"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@mipmap/benedict"
            android:layout_marginTop="404dp"
            android:layout_marginLeft="194dp"
            />
        <ImageView
            android:id="@+id/spider_cast4"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@mipmap/jacon_batalon"
            android:layout_marginTop="404dp"
            android:layout_marginLeft="279dp"
            />
        <TextView
            android:layout_width="73dp"
            android:layout_height="15dp"
            android:text="Tom Holland"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="484dp"
            android:textSize="12dp"
            />
        <TextView
            android:layout_width="50dp"
            android:layout_height="15dp"
            android:text="Zendaya"
            android:layout_marginLeft="109dp"
            android:layout_marginTop="484dp"
            android:textSize="12dp"
            />
        <TextView
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:text="Benedict Cumberbatch"
            android:layout_marginLeft="194dp"
            android:layout_marginTop="484dp"
            android:textSize="12dp"
            />
        <TextView
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:text="Jacon Batalon"
            android:layout_marginLeft="279dp"
            android:layout_marginTop="484dp"
            android:textSize="12dp"
            />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>